@@ -1,5 +1,7 @@
 plyr 0.1.8 (2008-XX-XX) ---------------------------------------------------
 
+* made rbind a little faster (~20%) using an idea from Richard Raubertas
+
 plyr 0.1.7 (2008-04-15) ---------------------------------------------------
 
 Ensure that rbind.fill copies attributes.
